test/data/invalid-messages/no-dot-in-name.message
## a message with dotless interface

## VALID_HEADER includes a LENGTH Header and LENGTH Body
VALID_HEADER method_call

FIELD_NAME ifce
TYPE STRING
STRING 'NoDotInHere'
FIELD_NAME mebr
TYPE STRING
STRING 'Bar'

ALIGN 8
END_LENGTH Header
START_LENGTH Body
END_LENGTH Body
